--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,6 +12,12 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Levels/BuildingEscapeLevel.BuildingEscapeLevel
 GameDefaultMap=/Game/Levels/BuildingEscapeLevel.BuildingEscapeLevel
 
+[/Script/Engine.Engine]
+bSmoothFrameRate=True
+bUseFixedFrameRate=False
+FixedFrameRate=30.000000
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Exclusive,Value=62.000000))
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
@@ -57,3 +63,5 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
+
+
