Fixed black shadow around doorframe by slighlty increaseing thedoor and doorframe size

--- a/BuildingEscape.uproject
+++ b/BuildingEscape.uproject
@@ -12,5 +12,16 @@
 				"Engine"
 			]
 		}
+	],
+	"Plugins": [
+		{
+			"Name": "MegascansPlugin",
+			"Enabled": true,
+			"SupportedTargetPlatforms": [
+				"Win64",
+				"Mac",
+				"Linux"
+			]
+		}
 	]
 }
