--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,7 @@
 [URL]
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
+r.DefaultFeature.AutoExposure=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -9,8 +10,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Levels/BuildingEscapeLevel.BuildingEscapeLevel
-GameDefaultMap=/Game/Levels/BuildingEscapeLevel.BuildingEscapeLevel
+EditorStartupMap=/Game/Levels/BuidlingEscape_DefaultLevel.BuidlingEscape_DefaultLevel
+GameDefaultMap=/Game/Levels/BuidlingEscape_DefaultLevel.BuidlingEscape_DefaultLevel
 GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
 
 [/Script/Engine.Engine]
@@ -64,4 +65,3 @@ InitialAverageFrameRate=0.016667
 PhysXTreeRebuildRate=10
 DefaultBroadphaseSettings=(bUseMBPOnClient=False,bUseMBPOnServer=False,bUseMBPOuterBounds=False,MBPBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPOuterBounds=(Min=(X=0.000000,Y=0.000000,Z=0.000000),Max=(X=0.000000,Y=0.000000,Z=0.000000),IsValid=0),MBPNumSubdivs=2)
 ChaosSettings=(DefaultThreadingModel=DedicatedThread,DedicatedThreadTickMode=VariableCappedWithTarget,DedicatedThreadBufferMode=Double)
-
