Added some assets made in other projects, updated .gitignore, and changed added exponential height fog to the scene.

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@ BuildingEscape.code-workspace
 # to be backed up
 ProjectZips
 Content/MedievalDungeon/
+Content/Materials/LandscapeLayers/
+Content/Megascans/
