--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4B3457484AE8EE5CE8271FB523B9C553
+CopyrightNotice=Fill out your copyright notice in the Description page of Project Settings.
+
