Added a splash screen when the game loads. Added a copyright notice. Deleted old c++ class that will not be needed. Made the screen fade when transitioning between the game level and win level.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,4 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4B3457484AE8EE5CE8271FB523B9C553
-CopyrightNotice=Fill out your copyright notice in the Description page of Project Settings.
+CopyrightNotice=Copyright Andrew Woodworth 2019-2020 All Rights Reserved
 
