renamed the project

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,4 +1,6 @@
 [URL]
+GameName=EscapeTheTower
+
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure=True
@@ -11,8 +13,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/BuidlingEscape_DefaultLevel.BuidlingEscape_DefaultLevel
-GameDefaultMap=/Game/Maps/BuidlingEscape_DefaultLevel.BuidlingEscape_DefaultLevel
+EditorStartupMap=/Game/Maps/BuidlingEscapeDefaultLevel.BuidlingEscapeDefaultLevel
+GameDefaultMap=/Game/Maps/BuidlingEscapeDefaultLevel.BuidlingEscapeDefaultLevel
 GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
 
 [/Script/Engine.Engine]
