Removed unused variables and a function from WinGameComponent. Fixed an error where the ChangeMatMesh was the wrong UStaticMeshComponent. Changed the way the ChangeMatMesh was calculated.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,7 +6,7 @@ CopyrightNotice=Copyright Andrew Woodworth 2019-2020 All Rights Reserved
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="C:/Users/Andrew/Documents/Packaged UE4 Projects")
+StagingDirectory=(Path="C:/Users/Andrew/Documents/Packaged UE4 Projects/WindowsNoEditor")
 FullRebuild=False
 ForDistribution=False
 IncludeDebugFiles=False
@@ -49,7 +49,7 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="BuildingEscape_DefaultLevel")
++MapsToCook=(FilePath="BuidlingEscapeDefaultLevel")
 +MapsToCook=(FilePath="WinScreenLevel")
 
 [/Script/Engine.AssetManagerSettings]
