Worked fixing a bug when launching the game through the project launcher.

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,13 +1,15 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=4B3457484AE8EE5CE8271FB523B9C553
 CopyrightNotice=Copyright Andrew Woodworth 2019-2020 All Rights Reserved
+ProjectName=Escape the Tower
+Description=A short puzzle solving, escape game.
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="C:/Users/Andrew/Documents/Packaged UE4 Projects/WindowsNoEditor")
-FullRebuild=False
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
@@ -53,7 +55,7 @@ bSkipMovies=False
 +MapsToCook=(FilePath="WinScreenLevel")
 
 [/Script/Engine.AssetManagerSettings]
-+PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=(/Game/Maps/WinScreenLevel.WinScreenLevel),Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
++PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 +PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
 bOnlyCookProductionAssets=False
 bShouldManagerDetermineTypeAndName=False
