Fixed error when cooking project with the through the project launcher. Got rid of some unused files.

--- a/.gitignore
+++ b/.gitignore
@@ -85,6 +85,7 @@ BuildingEscape.code-workspace
 
 # Folders added throughout making the project that do not need
 # to be backed up
+Releases
 ProjectZips
 Content/MedievalDungeon/
 Content/Materials/LandscapeLayers/
