--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,11 +4,18 @@ CopyrightNotice=Copyright Andrew Woodworth 2019-2020 All Rights Reserved
 ProjectName=Escape the Tower
 Description=A short puzzle solving, escape game.
 
+[/Script/Engine.AssetManagerSettings]
+bOnlyCookProductionAssets=False
+bShouldManagerDetermineTypeAndName=False
+bShouldGuessTypeAndNameInEditor=True
+bShouldAcquireMissingChunksOnLoad=False
+MetaDataTagsForAssetRegistry=()
+
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
 BuildTarget=
-StagingDirectory=(Path="C:/Users/Andrew/Documents/Packaged UE4 Projects/WindowsNoEditor")
+StagingDirectory=(Path="C:/Users/Andrew/Documents/Packaged UE4 Projects")
 FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
@@ -51,16 +58,7 @@ bSkipMovies=False
 +IniKeyBlacklist=EncryptionKey
 +IniKeyBlacklist=IniKeyBlacklist
 +IniKeyBlacklist=IniSectionBlacklist
-+MapsToCook=(FilePath="BuidlingEscapeDefaultLevel")
-+MapsToCook=(FilePath="WinScreenLevel")
-
-[/Script/Engine.AssetManagerSettings]
-+PrimaryAssetTypesToScan=(PrimaryAssetType="Map",AssetBaseClass=/Script/Engine.World,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game/Maps")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
-+PrimaryAssetTypesToScan=(PrimaryAssetType="PrimaryAssetLabel",AssetBaseClass=/Script/Engine.PrimaryAssetLabel,bHasBlueprintClasses=False,bIsEditorOnly=True,Directories=((Path="/Game")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
-bOnlyCookProductionAssets=False
-bShouldManagerDetermineTypeAndName=False
-bShouldGuessTypeAndNameInEditor=True
-bShouldAcquireMissingChunksOnLoad=False
-MetaDataTagsForAssetRegistry=()
++MapsToCook=(FilePath="/Game/Maps/BuidlingEscapeDefaultLevel")
++MapsToCook=(FilePath="/Game/Maps/WinScreenLevel")
 
 
