Set ForDistribution=True in the DefaultGame.ini file

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -10,7 +10,7 @@ BuildConfiguration=PPBC_Shipping
 BuildTarget=
 StagingDirectory=(Path="C:/Users/Andrew/Documents/Packaged UE4 Projects")
 FullRebuild=True
-ForDistribution=False
+ForDistribution=True
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
 bIncludeNativizedAssetsInProjectGeneration=False
@@ -60,5 +60,4 @@ bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
 bShouldAcquireMissingChunksOnLoad=False
 MetaDataTagsForAssetRegistry=()
-
 
