--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -36,7 +36,7 @@ InternationalizationPreset=English
 +CulturesToStage=en
 bCookAll=False
 bCookMapsOnly=False
-bCompressed=False
+bCompressed=True
 bSkipEditorContent=False
 bSkipMovies=False
 +IniKeyBlacklist=KeyStorePassword
@@ -60,4 +60,3 @@ bShouldManagerDetermineTypeAndName=False
 bShouldGuessTypeAndNameInEditor=True
 bShouldAcquireMissingChunksOnLoad=False
 MetaDataTagsForAssetRegistry=()
-
