Adjusted some building pieces in the main game level. Added a 'Press the E key to interact with objects' screen when loading into the game.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -14,7 +14,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/BuidlingEscapeDefaultLevel.BuidlingEscapeDefaultLevel
-GameDefaultMap=/Game/Maps/BuidlingEscapeDefaultLevel.BuidlingEscapeDefaultLevel
+GameDefaultMap=/Game/Maps/LoadingScreenLevel.LoadingScreenLevel
 GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
 
 [/Script/Engine.Engine]
