--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,6 +4,13 @@ CopyrightNotice=Copyright Andrew Woodworth 2019-2020 All Rights Reserved
 ProjectName=Escape the Tower
 Description=A short puzzle solving, escape game.
 
+[/Script/Engine.AssetManagerSettings]
+bOnlyCookProductionAssets=False
+bShouldManagerDetermineTypeAndName=False
+bShouldGuessTypeAndNameInEditor=True
+bShouldAcquireMissingChunksOnLoad=False
+MetaDataTagsForAssetRegistry=()
+
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Shipping
@@ -53,10 +60,6 @@ bSkipMovies=False
 +IniKeyBlacklist=IniSectionBlacklist
 +MapsToCook=(FilePath="/Game/Maps/BuidlingEscapeDefaultLevel")
 +MapsToCook=(FilePath="/Game/Maps/WinScreenLevel")
++MapsToCook=(FilePath="/Game/Maps/LoadingScreenLevel")
 
-[/Script/Engine.AssetManagerSettings]
-bOnlyCookProductionAssets=False
-bShouldManagerDetermineTypeAndName=False
-bShouldGuessTypeAndNameInEditor=True
-bShouldAcquireMissingChunksOnLoad=False
-MetaDataTagsForAssetRegistry=()
+
