Fixed the placement of some static meshes in the main game level. Working on making light shafts visible in packaged product.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,8 @@ GameName=EscapeTheTower
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure=True
 r.UsePreExposure=True
+r.VirtualTextures=False
+r.RayTracing=False
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
