--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,6 +7,7 @@ r.DefaultFeature.AutoExposure=True
 r.UsePreExposure=True
 r.VirtualTextures=False
 r.RayTracing=False
+r.DefaultFeature.AutoExposure.Method=0
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
