--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -3,6 +3,7 @@ ProjectID=4B3457484AE8EE5CE8271FB523B9C553
 CopyrightNotice=Copyright Andrew Woodworth 2019-2020 All Rights Reserved
 ProjectName=Escape the Tower
 Description=A short puzzle solving, escape game.
+ProjectVersion=1.1.0.0
 
 [/Script/Engine.AssetManagerSettings]
 bOnlyCookProductionAssets=False
@@ -61,5 +62,4 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/BuidlingEscapeDefaultLevel")
 +MapsToCook=(FilePath="/Game/Maps/WinScreenLevel")
 +MapsToCook=(FilePath="/Game/Maps/LoadingScreenLevel")
-
 
