Edit textures so they take up less space. Fixed bug when rotating objects. Deleted some unused assets.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 EditorStartupMap=/Game/Maps/BuidlingEscapeDefaultLevel.BuidlingEscapeDefaultLevel
 GameDefaultMap=/Game/Maps/LoadingScreenLevel.LoadingScreenLevel
 GlobalDefaultGameMode=/Game/Blueprints/BuildingEscapeGameModeBase_BP.BuildingEscapeGameModeBase_BP_C
+TransitionMap=/Game/Maps/LoadingScreenLevel.LoadingScreenLevel
+ServerDefaultMap=/Game/Maps/LoadingScreenLevel.LoadingScreenLevel
 
 [/Script/Engine.Engine]
 bSmoothFrameRate=True
